--- a/U3A_Attendance_System/Views/CourseDescriptionListView.xaml
+++ b/U3A_Attendance_System/Views/CourseDescriptionListView.xaml
@@ -1,7 +1,11 @@
 ﻿<UserControl x:Class="U3A_Attendance_System.Views.CourseDescriptionListView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:cal="http://www.caliburnproject.org">
+             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d" 
+             d:DesignHeight="500" d:DesignWidth="1062">
     <Grid HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -10,7 +14,7 @@
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="2*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Button Content="Create Course Template" Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" cal:Message.Attach="ShowCDEdit()"/>
+        <Button Content="Create Course Template" Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" cal:Message.Attach="ShowCDEdit($dataContext)"/>
         <!--<Label Content="Search Course Descriptions" VerticalAlignment="Top" HorizontalAlignment="Center"/>-->
         <TextBox Text="{Binding TitleSearch, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" VerticalAlignment="Center" HorizontalAlignment="Center" >
             <TextBox.Style>
@@ -37,7 +41,7 @@
             </TextBox.Style>
         </TextBox>
         <Button Content="Refresh" Name="RollMe" Width="200" VerticalAlignment="Center" HorizontalAlignment="Right" />
-        <DataGrid Name="CourseDescriptions" HorizontalAlignment="Stretch" VerticalAlignment="Top" AutoGenerateColumns="False" Grid.Row="1" IsReadOnly="True">
+        <DataGrid Name="CourseDescriptions" HorizontalAlignment="Stretch" VerticalAlignment="Top" AutoGenerateColumns="False" Grid.Row="1">
             <DataGrid.Resources>
                 <ResourceDictionary>
                     <Style x:Key="NoFocusColumnStyle" TargetType="{x:Type DataGridCell}">
@@ -72,7 +76,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button Content="Edit" Width="80" cal:Message.Attach="ShowCDEdit($dataContext)"></Button>
+                                <Button Content="Edit" Width="80" Click="Edit_btn"></Button>
                                 <Button Name="Delete"  Content="Delete"  cal:Message.Attach="DeleteDescriptionConfirm($dataContext)" Width="80"></Button>
                                 <Button Name="View_btn"  Content="View Courses"  IsEnabled="{Binding HasInstances}" cal:Message.Attach="ShowCIList($dataContext)"></Button>
                                 <Button Name="Create_btn"  Content="Create Course"  Width="80" cal:Message.Attach="ShowCIEdit($dataContext)"></Button>
