--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -107,9 +107,9 @@
 
                             <DatePicker Name="SessionStartDate" Grid.Column="0" Grid.Row="1" />
                             <Label Name="SessionStartDateDay" Grid.Column="1" Grid.Row="1" />
-                            <ComboBox Name="SessionFrequency" DisplayMemberPath="Key" Grid.Column="2" Grid.Row="1"></ComboBox>
+                            <ComboBox Name="SessionFrequency" DisplayMemberPath="Key" SelectedValuePath="Value" Grid.Column="2" Grid.Row="1"></ComboBox>
                             <TextBox Name="SessionOccurances" Grid.Column="3" Grid.Row="1" />
-                            <Button Name="CreateSession" Content="Create" Grid.Column="4" Grid.Row="1" />
+                            <Button cal:Message.Attach="CreateSession(SessionFrequency.SelectedValue)" Content="Create" Grid.Column="4" Grid.Row="1" />
                         </Grid>
                     </GroupBox>
 
@@ -125,8 +125,8 @@
                                 <RowDefinition />
                             </Grid.RowDefinitions>
                             <Label Content="Session" Grid.Row="0" Grid.Column="0" />
-                            <ComboBox Name="EditSession" ItemsSource="{Binding Sessions}" DisplayMemberPath="Date" Grid.Row="1" Grid.Column="0" />
-                            <Button cal:Message.Attach="ShowCISessionEdit(EditSession.SelectedValue)" Content="Edit" Grid.Row="1" Grid.Column="1" />
+                            <ComboBox Name="EditSession" ItemsSource="{Binding Sessions}" ItemStringFormat="{}{0:dd/MM}" DisplayMemberPath="Date" Grid.Row="1" Grid.Column="0" />
+                            <Button Content="Edit" Grid.Row="1" Grid.Column="1" />
                             <Button cal:Message.Attach="DeleteSession(EditSession.SelectedValue)" Content="Delete" Grid.Row="1" Grid.Column="2" />
                         </Grid>
                     </GroupBox>
@@ -157,7 +157,7 @@
                             <Label Content="Session" Grid.Column="1" Grid.Row="0" />
                             <Label Content="Presence" Grid.Column="2" Grid.Row="0" />
                             <TextBox Name="MemberId" Grid.Column="0" Grid.Row="1" />
-                            <ComboBox ItemsSource="{Binding Sessions}" SelectedItem="{Binding SessionOfAttendance, Mode=TwoWay}" DisplayMemberPath="Date" Grid.Column="1" Grid.Row="1" />
+                            <ComboBox ItemsSource="{Binding Sessions}" ItemStringFormat="{}{0:dd/MM}" SelectedItem="{Binding SessionOfAttendance, Mode=TwoWay}" DisplayMemberPath="Date" Grid.Column="1" Grid.Row="1" />
                             <ComboBox ItemsSource="{Binding Presences}" SelectedItem="{Binding SelectedPresence, Mode=TwoWay}" Grid.Column="2" Grid.Row="1" />
                             <Button Name="AddAttendance" Content="Add Attendance" Grid.Column="3" Grid.Row="1" />
                         </Grid>
